--- a/src/pages/photos.astro
+++ b/src/pages/photos.astro
@@ -65,7 +65,7 @@ var options = {
         }
         
         var data = image.data
-        return <pre>{JSON.stringify(data.title, null, 4)}</pre>
+        return <pre>{JSON.stringify(data, null, 4)}</pre>
 
         // return (
         //   <div class="item">
