--- a/src/pages/photos.astro
+++ b/src/pages/photos.astro
@@ -64,8 +64,8 @@ var options = {
           return ''
         }
         
-        var data = image.data
-        return <pre>{JSON.stringify(data, null, 4)}</pre>
+        return <pre>{JSON.stringify(image, null, 4)}</pre>
+        // var data = image.data
 
         // return (
         //   <div class="item">
