--- a/src/pages/photos.astro
+++ b/src/pages/photos.astro
@@ -23,9 +23,8 @@ photos.map((data, i) => {
 photos.map((image, i) => {
   if (!image.src) return
 
-  var logs = []
-  var data = datas.find(f => {logs.push(`${f.fullname} === ${getFName(image.src)}`); return f.fullname === getFName(image.src)})
-  photos[i].logs = logs
+  var data = datas.find(f => f.fullname === getFName(image.src))
+  photos[i].data = data
 })
 
 function getFName(name) {
@@ -35,7 +34,7 @@ function getFName(name) {
     if (name.includes('.')) {
       if (name.split('.').length > 2) {
         name = name.split('.')
-        name = `${name.slice(0, -2).join('.')}${name.slice(-1).join('.')}`
+        name = `${name.slice(0, -2).join('.')}.${name.slice(-1).join('.')}`
       }
     }
   }
@@ -60,24 +59,22 @@ var options = {
           return ''
         }
         
-        return <pre>{JSON.stringify(image.logs, null, 4)}</pre>
+        var data = image.data
 
-        // var data = image.data
-
-        // return (
-        //   <div class="item">
-        //     <img class="item__img" src={image.src || ''} alt={image.alt || ''} style={`--placeholder: url('https://imgs.adarshrkumar.dev/Photos/Places/${getFName(image.src || '') ||''}?w=25%25'); --img-width: ${image.width}px; --img-height: ${image.height}px`} loading="lazy" decoding="async" />
-        //     {
-        //       (!!data.title || !!data.info) ? (
-        //         <div class="item__info">
-        //           {!!data.title ? <h3 class="item__title">{data.title}</h3> : ''}
-        //           {!!data.location ? <span class="item__content">📍 {data.location}</span> : ''}
-        //         </div>
-        //       )
-        //        : ''
-        //     }
-        //   </div>
-        // )
+        return (
+          <div class="item">
+            <img class="item__img" src={image.src || ''} alt={image.alt || ''} style={`--placeholder: url('https://imgs.adarshrkumar.dev/Photos/Places/${getFName(image.src || '') ||''}?w=25%25'); --img-width: ${image.width}px; --img-height: ${image.height}px`} loading="lazy" decoding="async" />
+            {
+              (!!data.title || !!data.info) ? (
+                <div class="item__info">
+                  {!!data.title ? <h3 class="item__title">{data.title}</h3> : ''}
+                  {!!data.location ? <span class="item__content">📍 {data.location}</span> : ''}
+                </div>
+              )
+               : ''
+            }
+          </div>
+        )
       })
     }
   </SiteGridContent>
