--- a/src/pages/photos.astro
+++ b/src/pages/photos.astro
@@ -59,22 +59,24 @@ var options = {
           return ''
         }
         
+        return <pre>{getFName(image.src)}</pre>
+
         var data = image.data
 
-        return (
-          <div class="item">
-            <img class="item__img" src={image.src || ''} alt={image.alt || ''} style={`--placeholder: url('https://imgs.adarshrkumar.dev/Photos/Places/${getFName(image.src || '') ||''}?w=25%25'); --img-width: ${image.width}px; --img-height: ${image.height}px`} loading="lazy" decoding="async" />
-            {
-              (!!data.title || !!data.info) ? (
-                <div class="item__info">
-                  {!!data.title ? <h3 class="item__title">{data.title}</h3> : ''}
-                  {!!data.location ? <span class="item__content">📍 {data.location}</span> : ''}
-                </div>
-              )
-               : ''
-            }
-          </div>
-        )
+        // return (
+        //   <div class="item">
+        //     <img class="item__img" src={image.src || ''} alt={image.alt || ''} style={`--placeholder: url('https://imgs.adarshrkumar.dev/Photos/Places/${getFName(image.src || '') ||''}?w=25%25'); --img-width: ${image.width}px; --img-height: ${image.height}px`} loading="lazy" decoding="async" />
+        //     {
+        //       (!!data.title || !!data.info) ? (
+        //         <div class="item__info">
+        //           {!!data.title ? <h3 class="item__title">{data.title}</h3> : ''}
+        //           {!!data.location ? <span class="item__content">📍 {data.location}</span> : ''}
+        //         </div>
+        //       )
+        //        : ''
+        //     }
+        //   </div>
+        // )
       })
     }
   </SiteGridContent>
