--- a/src/pages/photos.astro
+++ b/src/pages/photos.astro
@@ -70,7 +70,7 @@ var options = {
 
         return (
           <div class="item">
-            <img class="item__img" src={image.src || ''} alt={image.alt || ''} style={`--placeholder: url('https://imgs.adarshrkumar.dev/Photos/Places/${getFName(image.src || '') ||''}?w=25%25'); --img-width: ${image.width}px; --img-height: ${image.height}px`} loading="lazy" decoding="async" />
+            <img class="item__img" src={image.src || ''} alt={image.alt || ''} style={`--placeholder: url('https://imgs.adarshrkumar.dev/Photos/Places/${getFName(image.src || '') ||''}?w=25%25');`} loading="lazy" decoding="async" />
             {
               (!!data.title || !!data.info) ? (
                 <div class="item__info">
