--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,7 +46,7 @@ if (className.endsWith(' ')) className = className.substring(-1)
     <title>{title}</title>
     <!-- <base href={Astro.site} /> -->
     <link rel="icon" href="/assets/favicon.png" />
-    <link rel="preload" href="/assets/placeholder.svg" />
+    <link rel="preload" as="image" href="/assets/placeholder.svg" />
     <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=625cc7f8cb9e7d001955b4a3&product=sop' async='async'></script>
     <Script name="settings" />
   </head>
