--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -7,11 +7,10 @@ import Layout from '../layouts/Layout.astro'
 import SiteGridContent from '../components/siteGridContent.astro'
 
 const vids = [
-    'UCzhr23vdbi63nZGYqBM7Ofw', 
-    'UCb35v6VAVFI8Q0aIpwPoW1g', 
-    'UCLK0Lj3V864AbKfutfyztYA', 
-    'UC8cV2cdrp1ccBWzoi1R-UwQ', 
-    'UCHUWd3IuPu3P21XkDW8vSuQ', 
+    'PiruxQ5s-aw', 
+    'lmmfbstDWjQ', 
+    'vqzBSyL_3-c', 
+    'eNV7s5V1gW0',
 ]
 
 var playlists = [
