--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -20,18 +20,20 @@ var playlists = [
 
 ---
 <Layout title="My Music">
-    <SiteGridContent id="videos" options={{keys: ['min'], values: {min: '12rem'}}}>
+    <h2 class="section-title">My Performences</h2>
+    <SiteGridContent classItems="videos" options={{keys: ['min', 'max'], values: {min: '4rem', max: '495px'}}}>
         {
             vids.map((vid, i) => {
                 return <iframe class="frame" src={`https://www.youtube-nocookie.com/embed/${vid}`} />
             })
         }
     </SiteGridContent>
-    <section class="music-area">
+    <h2 class="section-title">My Music Taste</h2>
+    <SiteGridContent classItems="music" options={{keys: ['min', 'max'], values: {min: '4rem', max: '660px'}}}>
         {
           playlists.map(p => {
             return <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src={p}></iframe>
           })
         }
-      </section>
+    </SiteGridContent>
 </Layout>
