--- a/src/styles/pages/music.scss
+++ b/src/styles/pages/music.scss
@@ -3,7 +3,7 @@
     width: 100%;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(0px, 660px));
+    grid-template-columns: repeat(auto-fit, minmax(4rem, 660px));
     gap: 1rem;
     justify-content: center;
 
