--- a/src/styles/pages/post.scss
+++ b/src/styles/pages/post.scss
@@ -69,7 +69,7 @@ html {
     
     .post-area {
         flex: 1;
-        padding-block-start: 0;
+        // padding-block-start: 0;
         margin-bottom: var(--pad);
         border-bottom: var(--bor);
 
