--- a/src/styles/pages/projects.scss
+++ b/src/styles/pages/projects.scss
@@ -1,7 +1,9 @@
 .main-content {
     display: flex;
     flex-direction: column;
-    gap: var(--pad);
+    &:not(.post) {
+        gap: var(--pad);
+    }
 }
 
 .category {
