--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -9,7 +9,7 @@ const vids = [
     // 'PiruxQ5s-aw', 
     'lmmfbstDWjQ', 
     '1go0R7GrNkE',
-    // 'vqzBSyL_3-c', 
+    'vqzBSyL_3-c', 
 ]
 
 var playlists = [
