--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -24,7 +24,7 @@ var author = authors[authorUsername]
 author.username = authorUsername
 
 ---
-<Layout title={`${post.frontmatter.title} | Blog`} pageType="post" classItems="ignorePadding">
+<Layout title={post.frontmatter.title} pageType="post" classItems="ignorePadding">
     <section class="info">
         <a href=`/author/${author.username}` class="author">{author.displayName}</a> | <span class="date">{post.frontmatter.date}</span>
     </section>
