--- a/src/pages/videos.astro
+++ b/src/pages/videos.astro
@@ -43,7 +43,7 @@ cids.forEach((cid, cI) => {
     <SiteGridContent classItems="videos">
         {
             cids.map(id => {
-                return <ChannelVideos id={id} vidsNum={vidsNum} csAmt={csAmt} vidsPerChannel={vidsPerChannel} />
+                return <ChannelVideos id={id} vidsPerChannel={vidsPerChannel} />
             })
         }
     </SiteGridContent>
