--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -42,7 +42,7 @@ var currentPath = Astro.url.pathname
             item.target = target
             item.primaryCls = primaryCls
 
-            return <a href={item.url} class={`btn${item.primaryCls}`} target={item.target || '_self'}>{item.name}</a>
+            return <a href={item.url} class={`btn nav-btn${item.primaryCls}`} target={item.target || '_self'}>{item.name}</a>
         })
     }
 </nav>
