--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -24,6 +24,7 @@
         border: solid 1px transparent;
 
         text-decoration: underline;
+        text-underline-offset: 10px;
     }
     
     &.primary {
